--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Portfólio",
   "short_name": "Meu Portfólio",
-  "start_url": "/dist/index.html",
+  "start_url": "/index.html",
   "display": "standalone",
   "serviceworker": {
     "src": "/sw.js",
@@ -9,28 +9,34 @@
   },
   "icons": [
     {
-      "src": "public/image.svg",
+      "src": "public/image-192x192.svg",
       "sizes": "192x192",
       "type": "image/svg",
-      "purpose": "maskable"
+      "purpose": "any"
     },
     {
-      "src": "public/image.svg",
+      "src": "public/image-512x512.svg",
       "sizes": "512x512",
       "type": "image/svg",
-      "purpose": "maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "public/image-144x144.svg",
+      "sizes": "144x144",
+      "type": "image/svg",
+      "purpose": "any"
     },
     {
       "src": "public/image-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any"
     },
     {
       "src": "public/image-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any"
     },
     {
       "src": "image-144x144.png",
